main.tf
resource "aws_key_pair" "auth_key" {
  key_name   = "${var.project_name}-${var.project_environment}"
  public_key = file("terraformproject.pub")
  tags = {
    Name = "${var.project_name}-${var.project_environment}"
  }
}

resource "aws_security_group" "sg" {

  name        = "${var.project_name}-${var.project_environment}"
  description = "Allow all Inbound and OutBound"

  ingress {

    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {

    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }


  egress {

    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "${var.project_name}-${var.project_environment}-sg"
  }
}

resource "aws_instance" "webserver" {

  ami                    = var.instance_ami
  instance_type          = var.instance_type
  key_name               = aws_key_pair.auth_key.key_name
  vpc_security_group_ids = [aws_security_group.sg.id]
  user_data              = file("setup.sh")
  tags = {
    "Name" = "${var.project_name}-${var.project_environment}-webserver"
  }
}
